prevent redirection of templates without ending

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <li class="dropdown">
                     <a href="#" onclick="preventRedirection(event)">Áreas de Servicio &#9660;</a>
                     <div class="dropdown-content">
-                        <a href="#" class="desplegable">Derecho</a>
-                        <a href="#" class="desplegable">Arquitectura</a>
-                        <a href="#" class="desplegable">Software</a>
-                        <a href="#" class="desplegable">Medicina</a>
-                        <a href="#" class="desplegable">Contaduria</a>
-                        <a href="#" class="desplegable">Ingeniería</a>
-                        <a href="#" class="desplegable">Inglés</a>
+                        <a href="#" class="desplegable" onclick="preventRedirection(event)">Derecho</a>
+                        <a href="#" class="desplegable" onclick="preventRedirection(event)">Arquitectura</a>
+                        <a href="#" class="desplegable" onclick="preventRedirection(event)">Software</a>
+                        <a href="#" class="desplegable" onclick="preventRedirection(event)">Medicina</a>
+                        <a href="#" class="desplegable" onclick="preventRedirection(event)">Contaduria</a>
+                        <a href="#" class="desplegable" onclick="preventRedirection(event)">Ingeniería</a>
+                        <a href="#" class="desplegable" onclick="preventRedirection(event)">Inglés</a>
                     </div>
                 </li>
                 <!--Menú responsive-->
