first and second section of inicio template

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </ul>
         </nav>
         <div class="title-text">
-            <p>CENTRO DE SOLUCIONES ACADÉMICAS</p>
+            <h1>CENTRO DE SOLUCIONES ACADÉMICAS</h1>
         </div>
     </header>
 
