--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Styles/nav.css">
+    <link rel="stylesheet" href="/Styles/inicio.css">
     <title>CEAC</title>
 </head>
 
@@ -52,13 +53,15 @@
     </header>
 
 
-    <section>
+    <section id="PrincipalSectionContent">
         <div id="contenido">
-
+            
         </div>
     </section>
+    
     <script src="Js/secciones.js"></script>
-
+    <script src="Js/sliderinicio.js"></script>
+    <script src="/Js/observer.js"></script>
 </body>
 
 </html>
