finished inicio template and added footer

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                         <a href="#" class="desplegable" onclick="cargarContenido(event,'Templates/conocenos')">Conócenos</a>
                         <a href="#" class="desplegable" onclick="cargarContenido(event,'Templates/preguntasfrecuentes')">FAQS</a>
                         <a href="#" class="desplegable" onclick="cargarContenido(event,'Templates/servicios')">Aréas de servicio</a>
-                        <a href="#" class="liContacto responsivePhone iniciarConversacion" target="_blank">CONTÁCTANOS</a>
+                        <a href="#" class="liContacto responsivePhone whatsaapURL" target="_blank">CONTÁCTANOS</a>
                     </div>
                 </li>
-                <li><a href="#" class="liContacto responsiveDesktop iniciarConversacion" target="_blank">CONTÁCTANOS</a></li>
+                <li><a href="#" class="liContacto responsiveDesktop whatsaapURL" target="_blank">CONTÁCTANOS</a></li>
             </ul>
         </nav>
         <div class="title-text">
@@ -58,6 +58,23 @@
             
         </div>
     </section>
+
+    <footer>
+        <img class="footerLogo" src="/Media/general/ceac_logo-footer.png">
+        <div class="footerText">
+          <h2>
+            CENTRO DE SOLUCIONES ACADÉMICAS
+          </h2>
+          <img src="/Media/general/linea_footer__text_ceac.png">
+        </div>
+        <div class="footerSocialNetwork">
+            <a class="instagramURL" target="_blank" href="#"><img src="/Media/general/instagram.png"></a>
+            <a class="linkedinURL" target="_blank" href="#"><img src="/Media/general/linkedin.png"></a>
+            <a class="whatsaapURL" target="_blank" href="#"><img src="/Media/general/whatsaap.png"></a>
+            <a class="gmailURL" target="_blank" href="#"><img src="/Media/general/email.png"></a>
+          </div>
+        <p class="footerCopy">&copy; 2024 Centro de Soluciones Académicas</p>
+      </footer>
     
     <script src="Js/secciones.js"></script>
     <script src="Js/sliderinicio.js"></script>
