--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Styles/nav.css">
     <link rel="stylesheet" href="/Styles/inicio.css">
+    <link rel="stylesheet" href="/Styles/conocenos.css">
     <title>CEAC</title>
 </head>
 
@@ -78,6 +79,7 @@
     
     <script src="Js/secciones.js"></script>
     <script src="Js/sliderinicio.js"></script>
+    <script src="/Js/conocenos.js"></script>
     <script src="/Js/observer.js"></script>
 </body>
 
