--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/Styles/nav.css">
     <link rel="stylesheet" href="/Styles/inicio.css">
     <link rel="stylesheet" href="/Styles/conocenos.css">
+    <link rel="stylesheet" href="/Styles/faqs.css">
     <title>CEAC</title>
 </head>
 
@@ -80,6 +81,7 @@
     <script src="Js/secciones.js"></script>
     <script src="Js/sliderinicio.js"></script>
     <script src="/Js/conocenos.js"></script>
+    <script src="/Js/faqs.js"></script>
     <script src="/Js/observer.js"></script>
 </body>
 
