--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
     <header>
       <nav class="navigator">
         <div class="logo-container">
-          <img
-            src="https://media.discordapp.net/attachments/1085674144538034228/1211031173535367188/image.png?ex=65ecb7ab&is=65da42ab&hm=42e5b374bc4afbd37077e352e3d8711f848fc74b17195d73fef9757b460fc4ce&=&format=webp&quality=lossless"
-            alt="Logo"
-          />
+          <img src="/Media/general/ceac_logo_nav.png" alt="Logo" />
           <p>CEAC</p>
         </div>
         <ul class="menu">
