convert images to webp

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="/Media/general/favicon.ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="180x180" href="" />
     <link rel="stylesheet" href="/Styles/nav.css" />
     <link rel="stylesheet" href="/Styles/inicio.css" />
     <link rel="stylesheet" href="/Styles/conocenos.css" />
@@ -119,9 +121,7 @@
         <header>
           <div class="chatModalContacto">
             <div class="chatModalImg">
-              <img
-                src="https://media.discordapp.net/attachments/1085674144538034228/1211031173535367188/image.png?ex=65ecb7ab&is=65da42ab&hm=42e5b374bc4afbd37077e352e3d8711f848fc74b17195d73fef9757b460fc4ce&=&format=webp&quality=lossless"
-              />
+              <img src="/Media/general/ceac_logo_nav.png" />
             </div>
             <div class="chatModalContactoUser">
               <h2>CEAC</h2>
@@ -273,7 +273,6 @@
     <script src="Js/sliderinicio.js"></script>
     <script src="/Js/conocenos.js"></script>
     <script src="/Js/faqs.js"></script>
-    <script src="/Js/servicios.js"></script>
     <script src="/Js/observer.js"></script>
   </body>
 </html>
